--- a/views/template_admin_update.phtml
+++ b/views/template_admin_update.phtml
@@ -11,7 +11,7 @@
 </div>
 <div class="mb-3">
   <label for="src" class="form-label">Source</label>
-  <input type="text"value="<?= $pictures["src"]?>"  class="form-control" name="src" id="src" placeholder="URL Source">
+  <input type="file"value="<?= $pictures["src"]?>"  class="form-control" name="src" id="src" placeholder="URL Source">
 </div>
 <div class="mb-3">
   <label for="author" class="form-label">Author</label>
