--- a/views/template_adminlist.phtml
+++ b/views/template_adminlist.phtml
@@ -13,7 +13,7 @@
   </thead>
   <tbody>
   <?php foreach ($pictures as $pic) : ?>
-    <tr>
+    <tr data-aos="fade-up">
       <th scope="row"><?= $pic['id'] ?></th>
       <td><img width="80" src="<?= $pic['src'] ?>" alt="<?= $pic['title'] ?>"></td>
       <td><?= $pic['title'] ?></td>
