template_admin_update.phtml

--- a/views/template_admin_update.phtml
+++ b/views/template_admin_update.phtml
@@ -58,28 +58,4 @@
 
 
 
-
-<!-- 
-
-Explication de ce code 
-
-
-  Ce code génère un formulaire permettant de mettre à jour les informations d'une image existante. Voici une explication de chaque partie du code :
-
-  1. **`<h1 class="mb-3 text-center">Admin Update</h1>`** :
-    - Cette ligne affiche un titre "Admin Update" centré horizontalement en haut de la page, indiquant que cette page est destinée à la mise à jour des informations d'une image.
-
-  2. **`<form method="POST">`** :
-    - Cette balise `<form>` démarre un formulaire HTML qui permettra à l'utilisateur de mettre à jour les informations d'une image. La méthode "POST" indique que les données du formulaire seront envoyées au serveur lors de la soumission du formulaire.
-
-  3. **Champs de formulaire préremplis** :
-    - Il y a plusieurs champs de formulaire, chacun prérempli avec les informations actuelles de l'image. Voici une explication pour chaque champ :
-      - **`<label for="title" class="form-label">Title</label>`** : Un champ de saisie pour le titre de l'image, avec la valeur actuelle du titre préremplie.
-      - **`<label for="description" class="form-label">Description</label>`** : Un champ de saisie pour la description de l'image, avec la valeur actuelle de la description préremplie.
-      - **`<label for="src" class="form-label">Source</label>`** : Un champ de saisie pour l'URL source de l'image, avec la valeur actuelle de l'URL source préremplie.
-      - **`<label for="author" class="form-label">Author</label>`** : Un champ de saisie pour le nom de l'auteur de l'image, avec la valeur actuelle du nom de l'auteur préremplie.
-
-  4. **Bouton "Update"** :
-    - **`<input type="submit" class="btn btn-primary" name="Update" value="Update">`** : Ce bouton "Submit" permet à l'utilisateur de soumettre le formulaire pour mettre à jour les informations de l'image. Il est stylisé comme un bouton Bootstrap avec la classe "btn btn-primary". Lorsque l'utilisateur clique sur ce bouton, les données du formulaire seront envoyées au serveur pour mettre à jour les informations de l'image.
-
-  En résumé, ce code génère un formulaire permettant de mettre à jour les informations d'une image existante. Les champs du formulaire sont préremplis avec les informations actuelles de l'image, ce qui permet à l'utilisateur de les modifier et de soumettre le formulaire pour effectuer la mise à jour. -->
+formulaire sont préremplis avec les informations actuelles de l'image, ce qui permet à l'utilisateur de les modifier et de soumettre le formulaire pour effectuer la mise à jour. -->
