--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -136,7 +136,7 @@ body.dark {
                             </li>
                             <li><a class="dropdown-item" href="?page=register">Register</a></li>
                             <?php else: ?>
-                            <li><a class="dropdown-item" href="?page=admin_list">Admin</a></li>
+                            <li><a class="dropdown-item" href="?page=adminlist">Adminlist</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
@@ -185,6 +185,8 @@ body.dark {
 
 
             <script>
+
+
 
 
 
